[package]
name = "astretch"
version = "0.1.0"
edition = "2024"
tags = ["audio", "time-stretching", "pitch-shifting", "signal-smith", "signalsmith", "phase-vocoder", "rustfft"]

[build-dependencies]
bindgen = "0.72"
cc = "1"

[dependencies]
num = "0.4.3"
rand = "0.9.2"
miniaudio-sys = { package = "est-audio-fork-ep-miniaudio-sys", git = "https://github.com/Estrol/miniaudio-rs" }
hound = "3.5.1"
libc = "0.2.180"
rustfft = "6.4.1"
wide = "1.1.1"
realfft = "3.5.0"
